--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,93 +1,108 @@
-name: Deploy Backend to Dev and Trigger Frontend
+# .github/workflows/deploy.yml
+
+name: 'Deploy Backend Infrastructure with Terraform'
 
 on:
   push:
     branches:
       - main
-    paths:
-      - 'backend/**'
-      - 'data/**' # Also trigger if the data template changes
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
+# OIDC permissions
 permissions:
   id-token: write
   contents: read
+  pull-requests: write # Required to comment on PRs
 
 jobs:
   terraform:
-    name: "Terraform Apply and Trigger Frontend"
+    name: 'Terraform IaC'
     runs-on: ubuntu-latest
     
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./backend # Set the working directory for all run steps
+
     steps:
+      # 1. Checkout the repository to the runner
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 2. Configure AWS credentials using OIDC
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::456202167790:role/githubaction
-          aws-region: us-east-1
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-region: us-east-1 # Change to your desired region
 
+      # 3. Setup Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.13.1
-          
+          terraform_version: 1.13.1 #  version for consistency
+
+      # 4. Terraform Format Check
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check -recursive
+
+      # 5. Terraform Init
+      # Initializes Terraform and downloads necessary providers.
       - name: Terraform Init
+        id: init
         run: terraform init
-        working-directory: ./backend/environments/dev
 
+      # 6. Terraform Validate
+      # Checks if the configuration is syntactically valid.
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+
+      # 7. Terraform Plan
+      # Creates an execution plan. This runs for both PRs and pushes to main.
       - name: Terraform Plan
-        run: terraform plan -out=tfplan
-        working-directory: ./backend/environments/dev
+        id: plan
+        run: terraform plan -no-color -out=tfplan
 
+      # 8. Add Plan to PR
+      # Creates a comment on the PR with the plan output. This step only runs on PRs.
+      - name: Create Plan Comment on PR
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            });
+            const botComment = comments.find(comment => {
+              return comment.user.type === 'Bot' && comment.body.includes('Terraform Plan')
+            });
+
+            const output = `#### Terraform Plan 📖\`\`\`\n${{ steps.plan.outputs.stdout }}\n\`\`\``;
+
+            if (botComment) {
+              github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: output
+              });
+            } else {
+              github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
+              });
+            }
+          
+      # 9. Terraform Apply
+      # This step only runs when code is pushed/merged to the main branch.
       - name: Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve tfplan
-        working-directory: ./backend/environments/dev
-
-      
-      # It uses heredoc syntax to correctly handle the multi-line JSON output from Terraform.
-      - name: Get Terraform Outputs
-        id: terraform_output
-        run: |
-          {
-            echo 'json_output<<EOF'
-            terraform output -json
-            echo 'EOF'
-          } >> "$GITHUB_OUTPUT"
-        working-directory: ./backend/environments/dev
-
-      - name: Seed DynamoDB Table
-        env:
-          TABLE_NAME: ${{ fromJson(steps.terraform_output.outputs.json_output).dynamodb_table_name.value }}
-        run: |
-          echo "Starting database seed for table: $TABLE_NAME"
-          chmod +x ./data/seed_database.sh
-          ./data/seed_database.sh "$TABLE_NAME"
-
-      - name: Look up Amplify App ID
-        id: lookup_app_id
-        run: |
-          APP_ID=$(aws amplify list-apps | jq -r '.apps[] | select(.name == "Project-9-intermediate-level-Cloud-Dictionary-App") | .appId')
-          echo "Found Amplify App ID: $APP_ID"
-          echo "app_id=$APP_ID" >> $GITHUB_OUTPUT
-
-      - name: Update Amplify Environment Variable
-        env:
-          API_URL: ${{ fromJson(steps.terraform_output.outputs.json_output).api_invoke_url.value }}
-          APP_ID: ${{ steps.lookup_app_id.outputs.app_id }}
-        run: |
-          echo "Updating Amplify App ID: $APP_ID with URL: $API_URL"
-          aws amplify update-app \
-            --app-id "$APP_ID" \
-            --environment-variables "VITE_API_URL=$API_URL"
-
-      - name: Trigger Amplify Frontend Build
-        env:
-          APP_ID: ${{ steps.lookup_app_id.outputs.app_id }}
-        run: |
-          echo "Starting new build for Amplify App ID: $APP_ID"
-          aws amplify start-job \
-            --app-id "$APP_ID" \
-            --branch-name main \
-            --job-type 'RELEASE'
