fix: update Terraform format check command to ensure proper formatting

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -47,7 +47,7 @@ jobs:
       # 4. Terraform Format Check
       - name: Terraform Format
         id: fmt
-        run: terraform fmt -check -recursive
+        run: terraform fmt 
 
       # 5. Terraform Init
       # Initializes Terraform and downloads necessary providers.
