--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches:
       - main
-  
+  workflow_dispatch: 
 permissions:
   id-token: write
   contents: read
@@ -42,101 +42,66 @@ jobs:
       - name: Terraform Format
         id: fmt
         run: terraform fmt -check -recursive
-        working-directory: ./backend  # <-- ADDED
+        working-directory: ./backend
 
       # 5. Terraform Init
       - name: Terraform Init
         id: init
         run: terraform init
-        working-directory: ./backend  # <-- ADDED
+        working-directory: ./backend
 
       # 6. Terraform Validate
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
-        working-directory: ./backend  # <-- ADDED
+        working-directory: ./backend
 
       # 7. Terraform Plan
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -out=tfplan
-        working-directory: ./backend  # <-- ADDED
+        run: terraform plan -no-color
+        working-directory: ./backend
+        # Continue on error allows the next step to handle plan output even if there are changes
+        continue-on-error: true
 
-      # 8. Add Plan to PR
-      - name: Create Plan Comment on PR
-        if: github.event_name == 'pull_request'
-        uses: actions/github-script@v6
-        with:
-          # This script will run at the root, so we pass the plan output explicitly
-          script: |
-            const { readFileSync } = require('fs');
-            const planOutput = readFileSync('./backend/tfplan.out').toString();
-
-            const output = `#### Terraform Plan 📖\n\n<details><summary>Show Plan</summary>\n\n\`\`\`\n${planOutput}\n\`\`\`\n</details>`;
-            
-            // Your existing script to find and update the comment...
-            // (Keeping the original script logic for brevity)
-            const { data: comments } = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-            });
-            const botComment = comments.find(comment => {
-              return comment.user.type === 'Bot' && comment.body.includes('Terraform Plan')
-            });
-            
-            if (botComment) {
-              github.rest.issues.updateComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: botComment.id,
-                body: output
-              });
-            } else {
-              github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: output
-              });
-            }
-        # Note: The original script to get plan output was simplified.
-        # A more robust way is to save the plan, then read it.
-        # Let's adapt the workflow to handle this better.
-        # We need to expose the plan output differently.
-        # A simpler way without file reading:
-      - name: Expose Plan as Artifact
-        if: github.event_name == 'pull_request'
-        uses: actions/upload-artifact@v3
-        with:
-          name: tfplan
-          path: backend/tfplan
-
-      # A more modern approach for commenting on PRs is to use a dedicated action
+      # 8. Update PR with Plan Output
+      # This step uses the output from the 'plan' step to comment on the PR.
       - name: Update PR with Plan
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
         env:
+          # The stdout from the plan step is passed into the script
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const output = `#### Terraform Plan 📖
+            // Constant to identify the bot's comment
+            const botCommentIdentifier = "#### Terraform Plan 📖";
+
+            // The full body of the comment to post
+            const output = `${botCommentIdentifier}
             <details><summary>Show Plan</summary>
+
             \`\`\`${process.env.PLAN}\`\`\`
-            </details>
-            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
             
-            // Your existing script to find and update the comment
+            </details>
+            
+            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+
+            // Get all existing comments on the PR
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
             });
+
+            // Find any existing comment from our bot
             const botComment = comments.find(comment => {
-              return comment.user.type === 'Bot' && comment.body.includes('Terraform Plan')
+              return comment.user.type === 'Bot' && comment.body.startsWith(botCommentIdentifier)
             });
 
+            // If we found an existing comment, update it
+            // Otherwise, create a new one
             if (botComment) {
               await github.rest.issues.updateComment({
                 owner: context.repo.owner,
@@ -153,8 +118,15 @@ jobs:
               });
             }
 
-      # 9. Terraform Apply
+      # 9. Handle Plan Failure
+      # If the plan step failed (e.g., due to an error in the code), fail the workflow.
+      - name: Fail Workflow if Plan Failed
+        if: steps.plan.outcome == 'failure'
+        run: exit 1
+
+      # 10. Terraform Apply
+      # This step only runs when code is pushed/merged to the main branch.
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve tfplan
-        working-directory: ./backend # <-- ADDED
+        run: terraform apply -auto-approve
+        working-directory: ./backend
