--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -11,9 +11,9 @@ on:
       - main
   workflow_dispatch: 
 permissions:
-  id-token: write
-  contents: read
-  pull-requests: write
+  id-token: write      # Required for OIDC authentication
+  contents: read       # Required to checkout the code
+  pull-requests: write # Required to comment on PRs
 
 jobs:
   terraform:
@@ -36,96 +36,56 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.13.1
+          terraform_version: 1.13.1 #  version for consistency
 
-      # 4. Terraform Format Check
-      - name: Terraform Format
-        id: fmt
-        run: terraform fmt 
-        working-directory: ./backend
-
-      # 5. Terraform Init
+      # 4. Terraform Init
+      # Initializes the working directory. The -backend-config is for non-interactive init.
       - name: Terraform Init
-        id: init
         run: terraform init
         working-directory: ./backend
 
-      # 6. Terraform Validate
+      # 5. Terraform Validate
+      # Checks whether a configuration is syntactically valid.
       - name: Terraform Validate
-        id: validate
-        run: terraform validate -no-color
+        run: terraform validate
         working-directory: ./backend
 
-      # 7. Terraform Plan
+      # 6. Terraform Plan
+      # Generates an execution plan. The `cd` command ensures we are in the right directory.
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color
-        working-directory: ./backend
-        # Continue on error allows the next step to handle plan output even if there are changes
+        run: |
+          cd backend
+          terraform plan -no-color
         continue-on-error: true
 
-      # 8. Update PR with Plan Output
-      # This step uses the output from the 'plan' step to comment on the PR.
-      - name: Update PR with Plan
+      # 7. Post Terraform Plan to PR
+      # Uses a dedicated, trusted action for commenting on PRs. This is the cleanest method.
+      - name: Update PR with Terraform Plan
         if: github.event_name == 'pull_request'
-        uses: actions/github-script@v7
-        env:
-          # The stdout from the plan step is passed into the script
-          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+        uses: thollander/actions-comment-pull-request@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            // Constant to identify the bot's comment
-            const botCommentIdentifier = "#### Terraform Plan 📖";
-
-            // The full body of the comment to post
-            const output = `${botCommentIdentifier}
+          message: |
+            #### Terraform Plan 📖
             <details><summary>Show Plan</summary>
 
-            \`\`\`${process.env.PLAN}\`\`\`
-            
+            ```terraform
+            ${{ steps.plan.outputs.stdout }}
+            ```
+
             </details>
-            
-            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-            // Get all existing comments on the PR
-            const { data: comments } = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-            });
-
-            // Find any existing comment from our bot
-            const botComment = comments.find(comment => {
-              return comment.user.type === 'Bot' && comment.body.startsWith(botCommentIdentifier)
-            });
-
-            // If we found an existing comment, update it
-            // Otherwise, create a new one
-            if (botComment) {
-              await github.rest.issues.updateComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: botComment.id,
-                body: output
-              });
-            } else {
-              await github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: output
-              });
-            }
-
-      # 9. Handle Plan Failure
-      # If the plan step failed (e.g., due to an error in the code), fail the workflow.
-      - name: Fail Workflow if Plan Failed
+      # 8. Handle Plan Errors
+      # Explicitly check the outcome of the plan step.
+      - name: Check Plan Outcome
         if: steps.plan.outcome == 'failure'
-        run: exit 1
+        run: |
+          echo "Terraform plan failed. See the output above for details."
+          exit 1
 
-      # 10. Terraform Apply
-      # This step only runs when code is pushed/merged to the main branch.
+      # 9. Terraform Apply
+      # This step only runs on a push event to the main branch.
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve
