fix: update Terraform format check command to remove unnecessary flags

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -41,7 +41,7 @@ jobs:
       # 4. Terraform Format Check
       - name: Terraform Format
         id: fmt
-        run: terraform fmt -check -recursive
+        run: terraform fmt 
         working-directory: ./backend/environments/dev
 
       # 5. Terraform Init
